Add project references to MyMediator and TailwindBlog.Domain
Updated the project file to include references to MyMediator and TailwindBlog.Domain. This change ensures the current project can leverage functionality from these dependencies.

--- a/TailwindBlog.ApiService/TailwindBlog.ApiService.csproj
+++ b/TailwindBlog.ApiService/TailwindBlog.ApiService.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyMediator\MyMediator.csproj" />
+    <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
     <ProjectReference Include="..\TailwindBlog.ServiceDefaults\TailwindBlog.ServiceDefaults.csproj" />
   </ItemGroup>
 
