--- a/TailwindBlog.AppHost/TailwindBlog.AppHost.csproj
+++ b/TailwindBlog.AppHost/TailwindBlog.AppHost.csproj
@@ -1,22 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.1" />
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.1"/>
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UserSecretsId>4f5fc5ed-634a-4453-a996-79ad168dff61</UserSecretsId>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <UserSecretsId>4f5fc5ed-634a-4453-a996-79ad168dff61</UserSecretsId>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TailwindBlog.ApiService\TailwindBlog.ApiService.csproj" />
-    <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\TailwindBlog.ApiService\TailwindBlog.ApiService.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" IsAspireProjectResource="false"/>
+        <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Aspire.Hosting.AppHost"/>
+        <PackageReference Include="Aspire.Hosting.MongoDB"/>
+        <PackageReference Include="Aspire.Hosting.Redis"/>
+    </ItemGroup>
 
 </Project>
