Enhance test verbosity in GitHub Actions workflow
Updated the `dotnet test` command to include detailed verbosity. This provides more comprehensive logs, aiding in debugging and tracking test execution outcomes.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,7 +50,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Unit Test
-        run: dotnet test --configuration Release --no-restore --no-build --logger trx --results-directory TestResults
+        run: dotnet test --configuration Release --no-restore --no-build --logger trx --results-directory TestResults --verbosity detailed
 
       - name: Upload Event File
         uses: actions/upload-artifact@v4
