--- a/TailwindBlog.ApiService/TailwindBlog.ApiService.csproj
+++ b/TailwindBlog.ApiService/TailwindBlog.ApiService.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Scalar.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
   </ItemGroup>
 
 </Project>
