--- a/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
+++ b/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
@@ -4,12 +4,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
-        <RootNamespace>TailwindBlog.Domain.Tests.Unit</RootNamespace>
+        <RootNamespace>TailwindBlog.Domain</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
-        <!--
-        To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
-          <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-    
+        <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+
+         <!--
+   
         To enable the Microsoft Testing Platform native command line experience, add property:
           <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
     
@@ -27,9 +27,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
-        <PackageReference Include="xunit.v3" Version="2.0.0"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2"/>
+        <PackageReference Include="JetBrains.Annotations" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.runner.visualstudio" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
     </ItemGroup>
 
 </Project>
