--- a/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
+++ b/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
@@ -24,8 +24,13 @@
 
     <ItemGroup>
 
+        <PackageReference Include="Bogus" />
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="FluentAssertions" />
         <PackageReference Include="JetBrains.Annotations"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="NSubstitute" />
+        <PackageReference Include="WaffleGenerator.Bogus" />
         <PackageReference Include="xunit.v3"/>
         <PackageReference Include="xunit.runner.visualstudio"/>
 
