Update dotnet workflow to simplify commands and add checkout
Removed redundant configuration flags from build and test steps to streamline commands. Added a checkout step with full fetch depth to ensure proper versioning support. These changes improve clarity and maintainability of the workflow.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,10 +38,10 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --no-restore
 
       - name: Run Tests
-        run: dotnet test --configuration Release --no-restore --no-build --settings runsettings.xml
+        run: dotnet test --no-build --settings runsettings.xml
 
       - name: Upload Test Results
         if: always()
@@ -64,6 +64,11 @@ jobs:
         with:
           files: |
             test-results/**/*.trx
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.2.0
