--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Run Tests
-        run: dotnet test --configuration Release --no-restore --no-build --settings runsettings.xml
+        run: dotnet test --no-build --settings runsettings.xml
 
       - name: Upload Test Results
         if: always()
@@ -64,6 +64,11 @@ jobs:
         with:
           files: |
             test-results/**/*.trx
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.2.0
