Simplify test command in GitHub Actions workflow.
Removed the `--no-build` flag from the `dotnet test` command in the workflow. This ensures compatibility with setups where builds may not align with previous assumptions, improving flexibility.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Run Tests
-        run: dotnet test --no-build --settings runsettings.xml
+        run: dotnet test --settings runsettings.xml
 
       - name: Upload Test Results
         if: always()
