--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Test Results
-          path: test-results
+          path: TestResults
 
       - name: Codecov
         uses: codecov/codecov-action@v5.4.2
@@ -63,7 +63,7 @@ jobs:
         if: always()
         with:
           files: |
-            test-results/**/*.trx
+            TestResults/**/*.trx
 
       - name: Checkout
         uses: actions/checkout@v4
