Add domain entities and supporting classes for TailwindBlog
Introduces core domain entities like `Article`, `Category`, and supporting abstractions to model the application domain. Adds helper methods for generating test data and utility functions. Configures required dependencies such as MongoDB and Bogus.

--- a/TailwindBlog.Domain/TailwindBlog.Domain.csproj
+++ b/TailwindBlog.Domain/TailwindBlog.Domain.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Bogus" />
+        <PackageReference Include="WaffleGenerator.Bogus" />
+      <PackageReference Include="MongoDB.EntityFrameworkCore" />
+    </ItemGroup>
+
 </Project>
