--- a/TailwindBlog.Web/package.json
+++ b/TailwindBlog.Web/package.json
@@ -1,12 +1,6 @@
 {
-  "name": "tailwindblog.web",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build:css": "tailwindcss -i ./wwwroot/css/app.css -o ./wwwroot/css/app.min.css --minify",
-    "watch:css": "tailwindcss -i ./wwwroot/css/app.css -o ./wwwroot/css/app.min.css --watch"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.1"
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.5",
+    "tailwindcss": "^4.1.5"
   }
 }
