Add Mapster package and Domain project reference
Added a reference to the TailwindBlog.Domain project and included the Mapster package in the TailwindBlog.Web project. These changes improve object mapping capabilities and enable the use of domain-specific functionalities within the web project.

--- a/TailwindBlog.Web/TailwindBlog.Web.csproj
+++ b/TailwindBlog.Web/TailwindBlog.Web.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
         <ProjectReference Include="..\TailwindBlog.ServiceDefaults\TailwindBlog.ServiceDefaults.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Mapster" />
     </ItemGroup>
 
     <Target Name="BuildTailwind" BeforeTargets="Build">
