--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           global-json-file: global.json
 
-      - name: Install Node.js dependencies
+      - name: Setup Node.js dependencies
         uses: actions/setup-node@v4
         with:
           node-version: "18"
@@ -41,6 +41,12 @@ jobs:
           cache-dependency-path: |
             **/package-lock.json
             **/yarn.lock
+
+      - name: Install Node.js dependencies
+        run: npm install
+      
+      - name: Build CSS
+        run: npm run build:css
 
       - name: Restore dependencies
         run: dotnet restore
