Add project reference and folder for article models
The Bunit test project now includes a reference to the main web project and a folder for article-related models. This sets up the structure for future tests involving article features.

--- a/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
+++ b/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
@@ -33,4 +33,12 @@
 
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Components\Features\Articles\Models\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj"/>
+    </ItemGroup>
+
 </Project>
