--- a/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
+++ b/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
-        <RootNamespace>TailwindBlog.MyMediator</RootNamespace>
+        <RootNamespace>MyMediator</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
         <!--
         To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
