Enable internal visibility for test projects.
Added InternalsVisibleTo attributes to allow unit and architecture tests to access internal members. This enhances testing capabilities while maintaining encapsulation within the main project.

--- a/TailwindBlog.Persistence.MongoDb/TailwindBlog.Persistence.MongoDb.csproj
+++ b/TailwindBlog.Persistence.MongoDb/TailwindBlog.Persistence.MongoDb.csproj
@@ -16,4 +16,9 @@
       <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="TailwindBlog.Persistence.MongoDb.Tests.Unit" />
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests" />
+    </ItemGroup>
+
 </Project>
