Grant InternalsVisibleTo for testing assemblies
Added `InternalsVisibleTo` entries to expose internal members to `TailwindBlog.Domain.Tests.Unit` and `TailwindBlog.Architecture.Tests`. This enables better unit testing and architecture validation by allowing access to non-public types and members.

--- a/TailwindBlog.Domain/TailwindBlog.Domain.csproj
+++ b/TailwindBlog.Domain/TailwindBlog.Domain.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="MongoDB.EntityFrameworkCore" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="TailwindBlog.Domain.Tests.Unit" />
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests" />
+    </ItemGroup>
+
 </Project>
