Add InternalsVisibleTo entries for test projects
Enabled internal access for `TailwindBlog.Web.Tests.Bunit` and `TailwindBlog.Architecture.Tests` by adding `InternalsVisibleTo` entries in the project file. This allows testing of internal members from these specific test projects.

--- a/TailwindBlog.Web/TailwindBlog.Web.csproj
+++ b/TailwindBlog.Web/TailwindBlog.Web.csproj
@@ -15,6 +15,11 @@
       <PackageReference Include="Mapster" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="TailwindBlog.Web.Tests.Bunit" />
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests" />
+    </ItemGroup>
+
     <Target Name="BuildTailwind" BeforeTargets="Build">
         <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run build:css"/>
     </Target>
