--- a/TailwindBlog.Architecture.Tests/TailwindBlog.Architecture.Tests.csproj
+++ b/TailwindBlog.Architecture.Tests/TailwindBlog.Architecture.Tests.csproj
@@ -1,36 +1,47 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="coverlet.collector">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="FluentAssertions" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="NetArchTest.Rules" />
-    <PackageReference Include="xunit" />
-    <PackageReference Include="xunit.runner.visualstudio">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
+    <PropertyGroup>
 
-  <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
-    <ProjectReference Include="..\TailwindBlog.ApiService\TailwindBlog.ApiService.csproj" />
-    <ProjectReference Include="..\TailwindBlog.Persistence.MongoDb\TailwindBlog.Persistence.MongoDb.csproj" />
-    <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
-    <ProjectReference Include="..\MyMediator\MyMediator.csproj" />
-  </ItemGroup>
+    </PropertyGroup>
+
+    <ItemGroup>
+
+        <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
+
+    </ItemGroup>
+
+    <ItemGroup>
+
+        <Using Include="Xunit"/>
+
+    </ItemGroup>
+
+    <ItemGroup>
+
+        <PackageReference Include="coverlet.collector"/>
+        <PackageReference Include="FluentAssertions"/>
+        <PackageReference Include="JetBrains.Annotations"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="NSubstitute"/>
+        <PackageReference Include="xunit.v3"/>
+        <PackageReference Include="xunit.runner.visualstudio"/>
+        <PackageReference Include="NetArchTest.Rules"/>
+
+    </ItemGroup>
+
+    <ItemGroup>
+
+        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.ApiService\TailwindBlog.ApiService.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.Persistence.MongoDb\TailwindBlog.Persistence.MongoDb.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj"/>
+        <ProjectReference Include="..\MyMediator\MyMediator.csproj"/>
+
+    </ItemGroup>
 
 </Project>
