Add InternalsVisibleTo for test projects
This change enables the internals of MyMediator to be accessible to the specified unit test projects. It facilitates better testing and ensures coverage of internal implementation details where necessary.

--- a/MyMediator/MyMediator.csproj
+++ b/MyMediator/MyMediator.csproj
@@ -10,4 +10,9 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="MyMediator.Tests.Unit"/>
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests"/>
+    </ItemGroup>
+
 </Project>
