--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,12 +16,17 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageVersion>
         <PackageVersion Include="FluentAssertions" Version="[7.2.0]"/>
+        <PackageVersion Include="FluentValidation" Version="12.0.0"/>
         <PackageVersion Include="JetBrains.Annotations" Version="2025.1.0-eap1"/>
         <PackageVersion Include="Mapster" Version="7.4.0"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.3"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0"/>
@@ -39,6 +44,7 @@
         <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.11.1"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.2.5"/>
         <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1"/>
+        <PackageVersion Include="Testcontainers.MongoDb" Version="3.8.0"/>
         <PackageVersion Include="WaffleGenerator.Bogus" Version="4.2.2"/>
         <PackageVersion Include="xunit" Version="2.9.3"/>
         <PackageVersion Include="xunit.extensibility.execution" Version="2.9.3"/>
@@ -49,5 +55,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageVersion>
         <PackageVersion Include="xunit.v3.extensibility.core" Version="2.0.1"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.InMemory" Version="9.0.2"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2"/>
     </ItemGroup>
 </Project>
