Add new package references and format project file
Added references for FluentValidation and Microsoft.AspNetCore.Components.WebAssembly packages to the project. Also made minor formatting adjustments to improve consistency in the .csproj file.

--- a/TailwindBlog.Web/TailwindBlog.Web.csproj
+++ b/TailwindBlog.Web/TailwindBlog.Web.csproj
@@ -8,11 +8,13 @@
 
     <ItemGroup>
         <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
-        <ProjectReference Include="..\TailwindBlog.ServiceDefaults\TailwindBlog.ServiceDefaults.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.ServiceDefaults\TailwindBlog.ServiceDefaults.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" />
       <PackageReference Include="Mapster" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     </ItemGroup>
 
     <ItemGroup>
@@ -21,11 +23,11 @@
     </ItemGroup>
 
     <Target Name="BuildTailwind" BeforeTargets="Build">
-        <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run build:css"/>
+        <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run build:css" />
     </Target>
 
     <Target Name="WatchTailwind" BeforeTargets="Build">
-        <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run watch:css"/>
+        <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run watch:css" />
     </Target>
 
 </Project>
