--- a/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
+++ b/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
@@ -1,29 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
         <RootNamespace>TailwindBlog.Domain</RootNamespace>
-
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
-
         <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
-
     </ItemGroup>
 
     <ItemGroup>
-
         <Using Include="Xunit"/>
-
     </ItemGroup>
 
     <ItemGroup>
-
         <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="FluentAssertions" />
@@ -31,9 +25,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="WaffleGenerator.Bogus" />
-        <PackageReference Include="xunit.v3"/>
+        <PackageReference Include="xunit" />
         <PackageReference Include="xunit.runner.visualstudio"/>
-
     </ItemGroup>
 
     <ItemGroup>
