--- a/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
+++ b/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
@@ -1,25 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
         <RootNamespace>TailwindBlog.Web</RootNamespace>
-
     </PropertyGroup>
 
     <ItemGroup>
-
         <Using Include="Bunit"/>
         <Using Include="Bunit.TestDoubles"/>
         <Using Include="Microsoft.Extensions.DependencyInjection"/>
         <Using Include="Xunit"/>
-
     </ItemGroup>
 
     <ItemGroup>
-
         <PackageReference Include="Bogus"/>
         <PackageReference Include="bunit"/>
         <PackageReference Include="coverlet.collector"/>
@@ -27,18 +23,15 @@
         <PackageReference Include="JetBrains.Annotations"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
         <PackageReference Include="NSubstitute"/>
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" />
         <PackageReference Include="WaffleGenerator.Bogus"/>
-        <PackageReference Include="xunit.v3"/>
+        <PackageReference Include="xunit"/>
         <PackageReference Include="xunit.runner.visualstudio"/>
-
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="Components\Features\Articles\Models\"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj"/>
+        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
