Enable implicit usings and add xunit.extensibility.execution.
Implicit usings are now enabled to streamline code imports and reduce boilerplate. Added the `xunit.extensibility.execution` package to enhance test execution functionality.

--- a/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
+++ b/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
@@ -6,6 +6,7 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <RootNamespace>TailwindBlog.Web</RootNamespace>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
@@ -26,6 +27,7 @@
         <PackageReference Include="NSubstitute.Analyzers.CSharp" />
         <PackageReference Include="WaffleGenerator.Bogus"/>
         <PackageReference Include="xunit"/>
+        <PackageReference Include="xunit.extensibility.execution"/>
         <PackageReference Include="xunit.runner.visualstudio"/>
     </ItemGroup>
 
