Remove obsolete tests and update validation logic
Obsolete unit tests for `CategoryValidatorTests` and unused methods in `CategoryTests` have been removed. Validation behaviors and field requirements in `ArticleTests` and `CategoryTests` have been streamlined. Added missing xUnit dependency to the project file for improved test execution.

--- a/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
+++ b/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="WaffleGenerator.Bogus" />
         <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.extensibility.execution" />
         <PackageReference Include="xunit.runner.visualstudio"/>
     </ItemGroup>
 
