--- a/TailwindBlog.Persistence.MongoDb.Tests.Unit/TailwindBlog.Persistence.MongoDb.Tests.Unit.csproj
+++ b/TailwindBlog.Persistence.MongoDb.Tests.Unit/TailwindBlog.Persistence.MongoDb.Tests.Unit.csproj
@@ -14,21 +14,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Bogus" />
-        <PackageReference Include="coverlet.collector" />
         <PackageReference Include="FluentAssertions" />
-        <PackageReference Include="JetBrains.Annotations"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NSubstitute" />
-        <PackageReference Include="Testcontainers.MongoDb" />
-        <PackageReference Include="WaffleGenerator.Bogus" />
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" />
         <PackageReference Include="xunit" />
-        <PackageReference Include="xunit.runner.visualstudio"/>
+        <PackageReference Include="xunit.extensibility.execution" />
+        <PackageReference Include="xunit.runner.visualstudio" />
         <PackageReference Include="Microsoft.Extensions.Configuration" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
-        <PackageReference Include="NSubstitute.Analyzers.CSharp" />
     </ItemGroup>
 
     <ItemGroup>
