--- a/MyMediator/MyMediator.csproj
+++ b/MyMediator/MyMediator.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="MyMediator.Tests.Unit"/>
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests"/>
     </ItemGroup>
 
 </Project>
