--- a/TailwindBlog.Domain/TailwindBlog.Domain.csproj
+++ b/TailwindBlog.Domain/TailwindBlog.Domain.csproj
@@ -8,8 +8,20 @@
 
     <ItemGroup>
       <PackageReference Include="Bogus" />
-        <PackageReference Include="WaffleGenerator.Bogus" />
+      <PackageReference Include="FluentValidation" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+      <PackageReference Include="MongoDB.Driver" />
       <PackageReference Include="MongoDB.EntityFrameworkCore" />
+      <PackageReference Include="WaffleGenerator.Bogus" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="TailwindBlog.Domain.Tests.Unit" />
+        <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MyMediator\MyMediator.csproj" />
     </ItemGroup>
 
 </Project>
