Revamp MongoDB persistence layer: refactor repositories and services, introduce context factory, enhance entity handling with improved query/filter logic, and add missing abstractions and DTO support.

--- a/TailwindBlog.Persistence.MongoDb/TailwindBlog.Persistence.MongoDb.csproj
+++ b/TailwindBlog.Persistence.MongoDb/TailwindBlog.Persistence.MongoDb.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Mapster" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
         <PackageReference Include="MongoDB.Driver" />
         <PackageReference Include="Microsoft.Extensions.Configuration" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
