Refactor article model and related components; enhance property annotations, integrate DTOs, adjust fake data generation, and update dependency injections.

--- a/TailwindBlog.Web/TailwindBlog.Web.csproj
+++ b/TailwindBlog.Web/TailwindBlog.Web.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.SessionStorage" />
       <PackageReference Include="FluentValidation" />
       <PackageReference Include="Mapster" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
